# vla-injection

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/agents/: session-context-loader.md
.codex/agents/: session-context-loader.toml
.github/workflows/: ci.yml
.reports/: codemap-diff.txt
.tours/: architect-architecture.tour  architect-t7-architecture.tour
configs/: example_m2.yaml  m1_benign_int8.yaml  m1_benign_nf4.yaml  m1_object_multiframe_pilot.yaml  m1_object_pilot.yaml  m1_object_semantic_sweep.yaml  m1_object_semantic_sweep_ext.yaml  m1_spatial_anchor.yaml  m1_target_pilot.yaml  m1_viability.yaml
configs/env/: requirements-gpu.txt
configs/semantic_targets/: libero_object.json  libero_spatial.json
configs/surrogate/: libero_goal_secondary_int8.yaml  libero_object_secondary_int8.yaml  libero_spatial_bf16.yaml  libero_spatial_int8.yaml  libero_spatial_nf4_4bit.yaml
docs/: theme-scoping-report.md
docs/CODEMAPS/: README.md  architecture.md  data.md  dependencies.md  modules.md
docs/core/: d3-radius-repin-preregistration.md  execution-playbook.md  goal-action-consistency-detector.md  local-prep-plan.md  metric-a-annotation-schema.md  t7-execution-playbook.md  t7-goal-action-consistency-detector.md  t7-local-prep-plan.md
docs/dynamic-workflow/: 2026-06-08-code-review.md
docs/gpu/: Connection.md  Overview.md  Running.md  Start.md
docs/lit-review/: openvla-backbone-attack-transfer-notes.md  vla-integrity-theme-scoping.md
docs/plans/: 2026-06-09-libero-state-adapter.md  2026-06-10-setup-html-guides.md  2026-06-18-l2-attach-real-rollout.md  2026-06-18-libero-episode-bringup.md  2026-06-19-step6-gcg-microbench.md  2026-06-19-step6-truebatch-lossof.md  2026-06-21-gcg-explainer-slides-design.md  2026-06-21-gcg-explainer-slides.md  2026-06-22-step6-d8-robogcg-faithful-config.md  2026-06-23-early-stop-bench.md  2026-06-24-m1-viability-gate.md  2026-07-01-m1-attack-bugfixes.md  2026-07-03-m1-attack-target-redesign-review-log.md  2026-07-03-m1-attack-target-redesign.md  2026-07-07-benign-precision-sanity.md  2026-07-15-m1-multiframe-trajectory-target.md  codex-hooks-and-cross-layer-eval-plan.md  metric-a-annotation-schema.md  phase3-implementation-plan.md  t7-codex-hooks-and-cross-layer-eval-plan.md  t7-execution-playbook.md  t7-goal-action-consistency-detector.md  t7-local-prep-plan.md  t7-phase3-implementation-plan.md
docs/presentation/: explainer.html  index-v2.html  script.md
docs/references/: README.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: _bootstrap.py  analyze_sweep.py  attach_l2_to_rollout.py  bench_early_stop.py  calibrate.py  capture_adversary_trajectory.py  check_semantic_separation.py  demo_figures.py  demo_metric_separation.py  demo_rollout.py  evaluate.py  evaluate_surrogate_transfer.py  fetch_openvla_stats.py  libero_state_smoketest.py  m1_gate_report.py  make_figures.py  make_sweep_figures.py  microbench_gcg.py  repin_schema.py  rescore_benign.py  run_attack.py  run_attack_adaptive.py  run_benign.py  run_surrogate_gcg.py  smoke_gcg_tiny.py  smoke_libero_episode.py  smoke_openvla_gradient.py  smoke_openvla_load.py  smoke_quantized_backward.py  summarize_surrogate_transfer.py
(+2259 files in other folders)
