[project]
name = "t7"
version = "0.0.0"
description = "T7 — goal-action consistency detection for instruction-injected VLA policies (model-free local components)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "matplotlib>=3.8",
    "huggingface-hub>=0.20",
]

# Heavy simulation stack — isolated so it can never break the core env.
# `libero` itself is installed from source on GB10 / the smoke test (see plan Task 10/11).
[project.optional-dependencies]
libero = [
    "mujoco>=3.1",
    "robosuite>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib mode + no __init__.py in tests/ avoids the test tree shadowing the real `t7` package.
addopts = "-q --import-mode=importlib"

[tool.ruff]
# Keep source 3.10-compatible so `src/t7` imports unchanged on the GB10 OpenVLA stack.
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# Pyright is configured in `pyrightconfig.json` (canonical, higher precedence than
# this table) — pinned to py3.11 + the src layout so `X | None`, `zip(strict=)`, and
# `t7.*` imports resolve. Keep config in one place (DRY).
