[project]
name = "evasion_tax"
version = "0.0.0"
description = "Embodiment Evasion Tax — goal-action consistency detection for instruction-injected VLA policies (model-free local components)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "matplotlib>=3.8",
    "huggingface-hub>=0.20",
]

# Heavy simulation stack — isolated so it can never break the core env.
# `libero` itself is installed from source on GB10 / the smoke test (see plan Task 10/11).
[project.optional-dependencies]
libero = [
    "mujoco>=3.1",
    "robosuite>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evasion_tax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Make `src` importable independently of the editable install (uv's editable .pth
# is regenerated on every `uv run` and is unreliable on this machine); `evasion_tax` then
# resolves from the source tree regardless.
pythonpath = ["src"]
# importlib mode + no __init__.py in tests/ avoids the test tree shadowing the real `evasion_tax` package.
addopts = "-q --import-mode=importlib"

[tool.ruff]
# Keep source 3.10-compatible so `src/evasion_tax` imports unchanged on the GB10 OpenVLA stack.
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

# Pyright is configured in `pyrightconfig.json` (canonical, higher precedence than
# this table) — pinned to py3.11 + the src layout so `X | None`, `zip(strict=)`, and
# `evasion_tax.*` imports resolve. Keep config in one place (DRY).
